--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_STANDARD 14)
 add_executable(list list.cpp)
 add_executable(main main.cpp)
 add_executable(stack stack.cpp)
+add_executable(Queue Queue.cpp)
