--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,5 @@ add_executable(list list.cpp)
 add_executable(main main.cpp)
 add_executable(stack stack.cpp)
 add_executable(Queue Queue.cpp)
+add_executable(Recursion Recursion.cpp)
+
